--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -1,7 +1,7 @@
 name: Main
 
 on:
-  push:
+  workflow_dispatch:
   pull_request:
     types: [opened, reopened, edited, synchronize]
 
@@ -23,6 +23,6 @@ jobs:
             echo ${{ github.repository }}
 
       - name: Should skip if external
-        if: github.event.pull_request.head.repo.full_name == github.repository || github.event_name == 'push'
+        if: github.event.pull_request.head.repo.full_name == github.repository
         run: |
           node -v
