--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,18 +12,23 @@ jobs:
         with:
           node-version: 16
       - uses: browser-actions/setup-chrome@latest
-      - name: get version
+      - name: Create PR
         run: |
-          git checkout -b release-check
           echo 'version=1.1.0' >> $GITHUB_ENV
           git stash
-          git checkout develop
-      - name: Create develop -> main PR
-        uses: peter-evans/create-pull-request@v5
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          title: "develop -> main"
-          body: >
-            Version: ${{ env.VERSION }}
-          branch: origin/main
-          base: origin/develop
+          curl -L \
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/jd239/main-test-repo-1/pulls \
+          -d '{"title":"Develop -> Main","body":"${{ env.VERSION }}","head":"jd239:develop","base":"main"}'
+      # - name: Create develop -> main PR
+      #   uses: peter-evans/create-pull-request@v5
+      #   with:
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     title: "develop -> main"
+      #     body: >
+      #       Version: ${{ env.VERSION }}
+      #     branch: origin/main
+      #     base: origin/develop
