--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,10 +18,10 @@ jobs:
           curl -L \
           -X POST \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
+          -H `Authorization: Bearer ${{ secrets.PR_CREATE }}`\
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/jd239/main-test-repo-1/pulls \
-          -d '{"title":"Develop -> Main","body":"${{ env.VERSION }}","head":"develop","base":"main"}'
+          -d '{"title":"Develop -> Main","body":`${{ env.VERSION }}`,"head":"develop","base":"main"}'
       # - name: Create develop -> main PR
       #   uses: peter-evans/create-pull-request@v5
       #   with:
