--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,12 +11,13 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - name: Create PR
+      - name: Set env
         run: |
           echo "VERSION=$(echo 1.1.0)" >> $GITHUB_ENV
-          echo $VERSION
           git stash
-          curl -L -X POST -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" "https://api.github.com/repos/jd239/main-test-repo-1/pulls" -d '{"title":"Develop -> Main","body":"$VERSION","head":"develop","base":"main"}'
+      - name: Create PR
+        run: |
+          curl -L -X POST -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" "https://api.github.com/repos/jd239/main-test-repo-1/pulls" -d '{"title":"Develop -> Main","body":"${{ env.VERSION }}","head":"develop","base":"main"}'
       # - name: Create develop -> main PR
       #   uses: peter-evans/create-pull-request@v5
       #   with:
